// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.base.get-service-status-response should parse a FeedProcessingFinished notification 1`] = `
{
  "notificationMetadata": {
    "notificationType": "FeedProcessingFinished",
    "payloadVersion": "1.0",
    "publishTime": 2019-07-01T10:46:29.000Z,
    "sellerId": "XXXXXXXXXXTest",
    "uniqueId": "0123456789-ca3b-4127-abe7-82cfbe19a032",
  },
  "notificationPayload": {
    "feedProcessingStatus": "_DONE_",
    "feedSubmissionId": "2291326430",
    "feedType": "_POST_PRODUCT_DATA_",
    "sellerId": "XXXXXXXXXXTest",
  },
}
`;

exports[`lib.client.parsers.base.get-service-status-response should parse a ReportProcessingFinished notification 1`] = `
{
  "notificationMetadata": {
    "notificationType": "ReportProcessingFinishedNotification",
    "payloadVersion": "1.0",
    "publishTime": 2019-07-01T10:46:29.000Z,
    "sellerId": "XXXXXXXXXXTest",
    "uniqueId": "0123456789-ca3b-4127-abe7-82cfbe19a032",
  },
  "notificationPayload": {
    "reportId": "1234",
    "reportProcessingStatus": "DONE_NO_DATA",
    "reportRequestId": "1234",
    "reportType": "_GET_FBA_FULFILLMENT_REMOVAL_ORDER_DETAIL_DATA_",
    "sellerId": "XXXXXXXXXXTest",
  },
}
`;

exports[`lib.client.parsers.base.get-service-status-response should parse a Test notification 1`] = `
{
  "notificationMetadata": {
    "notificationType": "Test",
    "payloadVersion": "1.0",
    "publishTime": 2019-07-01T10:46:29.000Z,
    "sellerId": "XXXXXXXXXXTest",
    "uniqueId": "0123456789-ca3b-4127-abe7-82cfbe19a032",
  },
  "notificationPayload": {},
}
`;

exports[`lib.client.parsers.base.get-service-status-response should parse an AnyOfferChanged notification 1`] = `
{
  "notificationMetadata": {
    "notificationType": "AnyOfferChanged",
    "payloadVersion": "1.0",
    "publishTime": 2015-01-06T14:15:55.708Z,
    "sellerId": "A2H6E05OPYV8CQ",
    "uniqueId": "4e3a2c04-5f63-4afb-8666-e480e83fae47",
  },
  "notificationPayload": {
    "offerChangeTrigger": {
      "asin": "B001BXLZUO",
      "itemCondition": "new",
      "marketplaceId": "ATVPDKIKX0DER",
      "timeOfOfferChange": 2015-01-06T14:15:54.699Z,
    },
    "offers": [
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": false,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": {
          "amount": 32.55,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 15400,
          "sellerPositiveFeedbackRating": 96,
        },
        "sellerId": "A2TU82NH1RX1NZ",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsDomestically": true,
        "shipsFrom": null,
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": false,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": {
          "amount": 32.55,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 33837,
          "sellerPositiveFeedbackRating": 97,
        },
        "sellerId": "A3SE0BD58ZZU8T",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsDomestically": true,
        "shipsFrom": null,
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": true,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": false,
        "listingPrice": {
          "amount": 32.95,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 2402,
          "sellerPositiveFeedbackRating": 93,
        },
        "sellerId": "A37V740TK9YOGL",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 48,
          "minimumHours": 24,
        },
        "shipsDomestically": true,
        "shipsFrom": {
          "country": "US",
          "state": "CA",
        },
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": false,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": {
          "amount": 32.95,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 1082,
          "sellerPositiveFeedbackRating": 100,
        },
        "sellerId": "A2H6E05OPYV8CQ",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsDomestically": true,
        "shipsFrom": null,
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": true,
        "isExpeditedShippingAvailable": false,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": {
          "amount": 33.56,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 189569,
          "sellerPositiveFeedbackRating": 99,
        },
        "sellerId": "A19NVE4G6SOT2C",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsDomestically": true,
        "shipsFrom": null,
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": true,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": false,
        "listingPrice": {
          "amount": 42,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 2016,
          "sellerPositiveFeedbackRating": null,
        },
        "sellerId": "A2P9RBMWEEISS4",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 48,
          "minimumHours": 24,
        },
        "shipsDomestically": true,
        "shipsFrom": {
          "country": "",
          "state": "",
        },
        "shipsInternationally": true,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": true,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": false,
        "listingPrice": {
          "amount": 45,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 15138,
          "sellerPositiveFeedbackRating": 94.7,
        },
        "sellerId": "A1JZL1L8ARSOYB",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 48,
          "minimumHours": 24,
        },
        "shipsDomestically": true,
        "shipsFrom": {
          "country": "US",
          "state": "CA",
        },
        "shipsInternationally": false,
        "subCondition": "new",
      },
      {
        "conditionNotes": null,
        "isBuyBoxWinner": false,
        "isExpeditedShippingAvailable": false,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": false,
        "listingPrice": {
          "amount": 45,
          "currencyCode": "USD",
        },
        "points": null,
        "primeInformation": null,
        "sellerFeedbackRating": {
          "feedbackCount": 13662,
          "sellerPositiveFeedbackRating": 95,
        },
        "sellerId": "A2N1A581RPHNSW",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 48,
          "minimumHours": 24,
        },
        "shipsDomestically": true,
        "shipsFrom": {
          "country": "",
          "state": "",
        },
        "shipsInternationally": false,
        "subCondition": "new",
      },
    ],
    "summary": {
      "buyBoxEligibleOffers": [
        {
          "condition": "new",
          "count": 4,
          "fulfillmentChannel": "Amazon",
        },
        {
          "condition": "new",
          "count": 4,
          "fulfillmentChannel": "Merchant",
        },
      ],
      "buyBoxPrices": [
        {
          "condition": "new",
          "landedPrice": {
            "amount": 32.95,
            "currencyCode": "USD",
          },
          "listingPrice": {
            "amount": 32.95,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "competitivePriceThreshold": null,
      "listPrice": {
        "amount": 42,
        "currencyCode": "USD",
      },
      "lowestPrices": [
        {
          "condition": "new",
          "fulfillmentChannel": "Amazon",
          "landedPrice": {
            "amount": 32.55,
            "currencyCode": "USD",
          },
          "listingPrice": {
            "amount": 32.55,
            "currencyCode": "USD",
          },
          "points": {
            "pointsNumber": 13,
          },
          "shipping": {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
        {
          "condition": "new",
          "fulfillmentChannel": "Merchant",
          "landedPrice": {
            "amount": 32.95,
            "currencyCode": "USD",
          },
          "listingPrice": {
            "amount": 32.95,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "minimumAdvertisedPrice": null,
      "numberOfOffers": [
        {
          "condition": "new",
          "count": 4,
          "fulfillmentChannel": "Amazon",
        },
        {
          "condition": "new",
          "count": 4,
          "fulfillmentChannel": "Merchant",
        },
      ],
      "salesRankings": [
        {
          "parseNumber": 26563,
          "productCategoryId": "beauty_display_on_website",
        },
      ],
      "suggestedLowerPricePlusShipping": null,
    },
  },
}
`;
